agregan boton nuevo post y sus estilos

--- a/style/estilos.css
+++ b/style/estilos.css
@@ -12,3 +12,17 @@ ul{
     justify-content: space-between;
     padding: 10px;
 }
+.mainButton{
+    background-color:#1bb76e;
+    color: white;
+    border: 0px;
+    padding: 5px 10px;
+    border-radius: 10px;
+    font-weight: bolder;
+    box-shadow:green 1px 1px;
+}
+.mainButton:hover{
+    cursor: pointer;
+    transform: scale(1.1);
+    box-shadow:green 2px 1px;
+}
